@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed Fl_Preferences Cygwin wide character bug (STR #2164)
 	- Fixed sorting in Fl_Browser - last item would not 
 	  be sorted (STR #2300)
 	- Fixed window levels in OS X Cocoa (STR #2316)
